# revng

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CREDITS.md  Doxyfile.in  LICENSE.md  LICENSE.mit  README.md  README.rst  SmallMap.h  binaryfile.cpp  binaryfile.h  check-conventions.sh  classsentinel.h  codegenerator.cpp  codegenerator.h  collectcfg.cpp  collectcfg.h  collectfunctionboundaries.cpp  collectfunctionboundaries.h  collectnoreturn.cpp  collectnoreturn.h  commonconstants.h  cpustateaccessanalysis.cpp  cpustateaccessanalysis.h  datastructures.h  debug.cpp  debug.h  debughelper.cpp  debughelper.h  dump.cpp  early-linked.c  externaljumpshandler.cpp  externaljumpshandler.h  functionboundariesdetection.cpp  functionboundariesdetection.h  functioncallidentification.cpp  functioncallidentification.h  generatedcodebasicinfo.cpp  (+52 more)
docs/: BuildSystem.rst  CMakeLists.txt  Doxyfile.in  FromIRToExecutable.rst  GeneratedIRReference.rst  Overview.rst  Pipeline.md  PythonExample.rst  READING-ORDER  RevambDumpUsage.rst  RevambUsage.rst  TranslateUsage.rst  instrument.py  mime_handling.md  revng-check-conventions.md  tester.py  what-is-revng.md
docs/quick-start/: index.md
docs/references/: index.md  mime-types.md  ptml.md
docs/stylesheets/: theme.css
docs/user-manual/: analyses.md  index.md  metaaddress.md  model.md  working-environment.md
include/: CMakeLists.txt
include/revng/: CMakeLists.txt
include/revng-c/: DecompilationPass.h  UnitTestHelpers.h
lib/: CMakeLists.txt
lib/ABI/: CMakeLists.txt  DefaultFunctionPrototype.cpp  Definition.cpp  FunctionType.cpp  ModelHelpers.cpp  RegisterStateDeductions.cpp
lib/ABIAnalyses/: ABIAnalysis.cpp  ABIAnalysis.template  ABIAnalysisPass.cpp  Analyses.h  CMakeLists.txt  Common.h  DeadRegisterArgumentsOfFunction.cpp  DeadRegisterArgumentsOfFunction.dot  DeadReturnValuesOfFunctionCall.cpp  DeadReturnValuesOfFunctionCall.dot  RegisterArgumentsOfFunctionCall.cpp  UsedArgumentsOfFunction.cpp  UsedArgumentsOfFunction.dot  UsedRegisterArgumentsOfFunction.cpp  UsedReturnValuesOfFunction.cpp  UsedReturnValuesOfFunction.dot  UsedReturnValuesOfFunctionCall.cpp  UsedReturnValuesOfFunctionCall.dot
lib/AdjustStackPointer/: AdjustStackPointerPass.cpp  CMakeLists.txt
lib/AutoEnforcer/: AutoEnforcer.cpp  AutoEnforcerErrors.cpp  AutoEnforcerLibraryRegistry.cpp  AutoEnforcerTarget.cpp  BackingContainers.cpp  BinaryContainer.cpp  CMakeLists.txt  InputOutputContract.cpp  LLVMEnforcer.cpp  Pipeline.cpp  PipelineLoader.cpp  RevngEnforcers.cpp  Step.cpp
lib/Backend/: ALAPVariableDeclaration.cpp  ALAPVariableDeclaration.h  CBackendPass.cpp  CDecompilationPipe.cpp  CMakeLists.txt  DecompileFunction.cpp  DecompilePipe.cpp  DecompileToDirectoryPipe.cpp  DecompileToSingleFile.cpp  DecompileToSingleFilePipe.cpp  DecompiledYAMLToC.cpp  DecompiledYAMLToCPipe.cpp  VariableScopeAnalysis.cpp  VariableScopeAnalysis.h  VariableScopeAnalysisPass.cpp
lib/BasicAnalyses/: CMakeLists.txt  CSVAliasAnalysis.cpp  EmptyNewPC.cpp  FunctionCallIdentification.cpp  GeneratedCodeBasicInfo.cpp  MaterializedValue.cpp  PromoteGlobalToLocalVars.cpp  ReachingDefinitionsPass.cpp  RemoveDbgMetadata.cpp  RemoveHelperCalls.cpp  RemoveNewPCCalls.cpp  ShrinkInstructionOperandsPass.cpp
lib/BeautifyGHAST/: BeautifyGHAST.cpp  BeautifyGHAST.h  BeautifyGHASTPass.cpp  CMakeLists.txt
lib/Canonicalize/: CMakeLists.txt  DiscardBrokenDebugInformation.cpp  EmbedStatementComments.cpp  EmbedVariableNames.cpp  ExitSSAPass.cpp  FoldModelGEP.cpp  HoistStructPhis.cpp  ImplicitModelCastPass.cpp  LoopRewriteWithCanonicalIV.cpp  MakeLocalVariables.cpp  MakeModelCastPass.cpp  MakeModelGEPPass.cpp  OperatorPrecedenceResolutionPass.cpp  PeepholeOptimizationPass.cpp  PrepareLLVMIRForMLIR.cpp  PrettyIntFormattingPass.cpp  RemoveBrokenDebugInformation.cpp  RemoveConstantArrayReturnsPass.cpp  RemoveLLVMAssumeCallsPass.cpp  RemoveLoadStore.cpp  RemovePointerCasts.cpp  SimplifySwitchPass.cpp  SplitOverflowIntrinsicsPass.cpp  SwitchToStatements.cpp  TernaryReductionPass.cpp  TwosComplementArithmeticNormalizationPass.cpp
lib/Clift/: CMakeLists.txt  Clift.cpp  CliftAttributes.cpp  CliftBytecode.h  CliftContainer.cpp  CliftDialect.cpp  CliftEnums.cpp  CliftInterfaces.cpp  CliftOpHelpers.cpp  CliftOpInterfaces.cpp  CliftOpTraits.cpp  CliftTypes.cpp
lib/CliftEmitC/: AttributeHeader.cpp  CBackend.cpp  CBackendPass.cpp  CBackendPipe.cpp  CEmitter.cpp  CMakeLists.txt  CSemantics.cpp  CSemanticsPass.cpp  HelperHeader.cpp  ModelHeader.cpp  PrimitiveHeader.cpp  PrintTypeDependencyGraph.h  TypeDependencyGraph.cpp  TypeDependencyGraph.h  TypeStack.cpp  TypeStack.h
lib/CliftImportModel/: CMakeLists.txt  ImportCliftTypesPipe.cpp  ImportModel.cpp  ImportModelNamesPipe.cpp  ModelVerify.cpp  ModelVerifyPipe.cpp
lib/CliftPipes/: CBackendPipe.cpp  CMakeLists.txt  CliftContainer.cpp  ClifterPipe.cpp  HeaderContainers.h  Headers.cpp  ImportCliftTypesPipe.cpp  ImportModelNamesPipe.cpp  LegalizationPipe.cpp  ModelVerifyPipe.cpp  OptimizationPipe.cpp
lib/CliftTransforms/: CMakeLists.txt  Legalization.cpp  LegalizationPipe.cpp  LoopDetection.cpp
lib/Clifter/: CMakeLists.txt  Clifter.cpp  ClifterPipe.cpp
lib/DataLayoutAnalysis/: CMakeLists.txt  DLAHelpers.cpp  DLAHelpers.h  DLALayouts.cpp  DLAModelFuncHelpers.cpp  DLAModelFuncHelpers.h  DLAPass.cpp  DLATypeSystem.cpp  FuncOrCallInst.cpp  FuncOrCallInst.h
lib/DebugHelper/: CMakeLists.txt  DebugHelper.cpp
lib/Enforcers/: Lift.cpp  (+6 more)
nanobind/: CMakeLists.txt  fake_pipebox.cpp  my_ext.cpp  test.py
python/: CMakeLists.txt  README.md  pyproject.toml  pyproject_revng.toml  pyproject_revng_internal.toml  requirements.txt  setup.py  wheel-install.sh
tests/: CMakeLists.txt  FindTools.cmake  Tests.cmake  calc.c  floating-point.c  function-call.c  get-function-offset  get-function-virtual-address  get-text-offset  get-text-virtual-address  global.c  li-csv-to-ld-options  support.c  syscall.c
typescript/: CMakeLists.txt  build-model.sh  build-tupletree.sh  model.ts  package-model.json  package-pipeline-description.json  package.json  tsconfig-model.json  tuple_tree.ts
(+3818 files in other folders)
