#
# Copyright rev.ng Labs Srl. See LICENSE.md for details.
#

add_subdirectory(Backend)
add_subdirectory(ImportFromC)
add_subdirectory(DataLayoutAnalysis)
add_subdirectory(Canonicalize)
add_subdirectory(HeadersGeneration)
add_subdirectory(InitModelTypes)
add_subdirectory(mlir)
add_subdirectory(PromoteStackPointer)
add_subdirectory(RemoveExtractValues)
add_subdirectory(RemoveLiftingArtifacts)
add_subdirectory(RestructureCFG)
add_subdirectory(Support)
add_subdirectory(TypeNames)
